--- a/assets/css/github-styles.css
+++ b/assets/css/github-styles.css
@@ -165,8 +165,9 @@ img {
   padding: 5px 8px;
   font-size: 1.4em;
   color: #666;
-  max-width: 550px;
+  width: 100%;
   margin-bottom: 15px;
+  text-align: center;
 }
 
 #gh-submit {
